// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballSummary should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH ibauhN"
  >
    <div
      class="sc-bxivhb sc-ifAKCX eApjsw"
    />
    <div
      class="sc-htpNat inAUId"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballSummary should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH hECBFg"
  >
    <div
      class="sc-bxivhb sc-ifAKCX eApjsw"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
